--- a/index.html
+++ b/index.html
@@ -8,17 +8,12 @@
     <title>Rog's Text Adventure - JavaScript Edition!!</title>   
 
     <!-- game resources-->
-<!--     
-    <img id="boat" src="Images/Boat.png" hidden/>  
-    <img id="sub" src="Images/Sub.png" hidden/>
-    <img id="depth" src="Images/Depth.png" hidden/>
-    <img id="missile" src="Images/Missile.png" hidden/>
     <audio id="audiofiles" controls hidden>
-      <source src="Sound\GuitarHero.mp3" id="sndDrop" type="audio/mp3">
-      <source src="Sound\08 - Run Of The Mill.mp3" id="sndBackground" type="audio/mp3">
-      <source src="Sound\/chatResponseReceived3.mp3" id="sndHit" type="audio/mp3">
+      <source src="Sound\main.mp3" id="sndMain" type="audio/mp3">
+      <source src="Sound\playagain.mp3" id="sndPlayAgain" type="audio/mp3">
+      <source src="Sound\youlose.mp3" id="sndYouLose" type="audio/mp3">
+      <source src="Sound\youwin.mp3" id="sndYouWin" type="audio/mp3">
     </audio>
---> 
   </head>
   <div>
 
