--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
   <div>
 
 <!-- intro screens-->
-<div>   
-   <pre id="introScr1" hidden>
+<div class="scr">
+ <div>   
+   <pre id="scr--introScr1" hidden>
       ************************************************************************************************************************
       *                                                                                                                      *
       *    RRRRRRRRRRRRRRRR       OOOOOOOOOOOOOOO     GGGGGGGGGGGGGG          EEEEEEEEEEEEEEEEEE      RRRRRRRRRRRRRRR        *
@@ -64,7 +65,7 @@
     </pre>
    </div>
     <div>
-    <pre id="introScr2" hidden>
+    <pre id="scr--introScr2" hidden>
       ************************************************************************************************************************
       *    TTTTTTT     RRRRRRR     AAAAAAA     PPPPPPP     PPPPPPP     EEEEEEE     DDDDDD                                    *
       *       T        R     R     A     A     P     P     P     P     E           D     D                                   *
@@ -108,7 +109,7 @@
       ************************************************************************************************************************
     </pre>
     </div>
-    <pre id="exitScr" hidden>
+    <pre id="scr--exitScr" hidden>
       ************************************************************************************************************************
       *                                                                                                                      *
       *     TTTTTTTTTTTTTTT    H             H     AAAAAAAAAAAAA     NN         N       K       K       SSSSSSSSSSSSSS       *
@@ -153,7 +154,7 @@
    </pre>
   </div>
   <div>
-    <pre id="playAgainScr" hidden>
+    <pre id="scr--playAgainScr" hidden>
       ************************************************************************************************************************
       *                                                                                                                      *
       *                                                                                                                      *
@@ -198,7 +199,7 @@
     </pre>
   </div>
   <div>
-    <pre id="winScr" hidden>
+    <pre id="scr--winScr" hidden>
       ************************************************************************************************************************
       *                                                                                                                      *
       *                                                                                                                      *
@@ -243,7 +244,7 @@
     </pre>
   </div>
   <div>
-    <pre id="loseScr" hidden>
+    <pre id="scr--loseScr" hidden>
       ************************************************************************************************************************
       *                                                                                                                      *
       *                                                                                                                      *
@@ -288,13 +289,13 @@
     </pre>
   </div>
     <div>
-      <pre id="gameRoom" hidden>
+      <pre id="scr--gameRoom" hidden>
       </pre>
     </div> 
     <p id="lblCommand" hidden>Enter Command:</p>
     <input type="text" title="Enter Command" id="txtCommand" hidden></input>
     <button id="btnStart" hidden>Click To Play!</button>
-
+ </div>
     <script src="./Modules/controller.js" type="module" defer></script>
     <script src="./Modules/model.js"" type="module" defer></script>
     <script src="./Modules/view.js"" type="module" defer></script>
