--- a/index.html
+++ b/index.html
@@ -292,9 +292,11 @@
       <pre id="scr--gameRoom" hidden>
       </pre>
     </div> 
-    <p id="lblCommand" hidden>Enter Command:</p>
-    <input type="text" title="Enter Command" id="txtCommand" hidden></input>
+    
+    <input type="text" title="Enter Command" id="txtCommand" name="txtCommand" hidden></input>
+    <label for="txtCommand" id="lblCommand" hidden>Enter Command :</label>
     <button id="btnStart" hidden>Click To Play!</button>
+    <button id="btnHelp" hidden>Help</button>
  </div>
     <script src="./Modules/controller.js" type="module" defer></script>
     <script src="./Modules/model.js"" type="module" defer></script>
