--- a/index.html
+++ b/index.html
@@ -293,11 +293,13 @@
       </pre>
     </div> 
     
+      <!-- game controls-->
     <input type="text" title="Enter Command" id="txtCommand" name="txtCommand" hidden></input>
     <label for="txtCommand" id="lblCommand" hidden>Enter Command :</label>
     <button id="btnStart" hidden>Click To Play!</button>
     <button id="btnHelp" hidden>Help</button>
  </div>
+   <!-- game code modules-->
     <script src="./Modules/controller.js" type="module" defer></script>
     <script src="./Modules/model.js"" type="module" defer></script>
     <script src="./Modules/view.js"" type="module" defer></script>
